[package]
name = "cni"
version = "0.1.3"
authors = ["divinerapier <poriter.coco@gmail.com>"]
edition = "2018"
publish = true
repository = "https://github.com/divinerapier/cni-rs"
description = "A container network interface implement in rust"
license = "Apache-2.0"
categories = ["kubernetes", "network"]
keyworks = ["kubernetes", "cni", "network"]
include = ["Cargo.toml", "src/**/*.rs", "README.md", "LICENSE"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnetwork = "0.17.0"
thiserror = "1.0.20"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
typetag = "0.1.5"
